# tdd

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml
app/: config.py  db.py  main.py
app/api/: crud.py  ping.py  summaries.py
app/models/: tortoise.py
db/: Dockerfile
project/: Dockerfile.prod
project/app/api/: crud.py
project/tests/: test_ping.py  test_summaries.py
tests/: conftest.py  test_ping.py  test_summaries.py
