[tool.poetry]
name = "testdriven_tdd"
version = "0.1.0"
description = ""
authors = ["maciej.sitowski <maciej.sitowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.94.1"
uvicorn = "0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
