[tool.poetry]
name = "testdriven_tdd"
version = "0.1.0"
description = ""
authors = ["maciej.sitowski <maciej.sitowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.94.1"
uvicorn = "0.21.1"
asyncpg = "0.27.0"
tortoise-orm = "0.19.3"
aerich = "0.7.1"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
